error_logs/oled_flag_enabled.txt
❯ qmk compile -e CONVERT_TO=blok
Ψ Compiling keymap with gmake --jobs=1 CONVERT_TO=blok crkbd:seajaysec_CRKBD_FORREAL


QMK Firmware 0.18.17
Making crkbd/rev1 with keymap seajaysec_CRKBD_FORREAL

arm-none-eabi-gcc (GNU Tools for Arm Embedded Processors 8-2019-q3-update) 8.3.1 20190703 (release) [gcc-8-branch revision 273027]
Copyright (C) 2018 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

Size before:
   text    data     bss     dec     hex filename
      0   32788       0   32788    8014 crkbd_rev1_seajaysec_CRKBD_FORREAL_blok.uf2

Compiling: keyboards/crkbd/keymaps/seajaysec_CRKBD_FORREAL/features/caps_word.c                     [OK]
Compiling: keyboards/crkbd/crkbd.c                                                                  [OK]
Compiling: keyboards/crkbd/rev1/rev1.c                                                              [OK]
Compiling: .build/obj_crkbd_rev1/src/default_keyboard.c                                             [OK]
Compiling: quantum/keymap_introspection.c                                                          In file included from quantum/keymap_introspection.c:5:
./keyboards/crkbd/keymaps/seajaysec_CRKBD_FORREAL/keymap.c:407:6: error: conflicting types for 'oled_task_user'
 void oled_task_user(void) {
      ^~~~~~~~~~~~~~
In file included from quantum/quantum.h:181,
                 from keyboards/crkbd/rev1/rev1.h:22,
                 from keyboards/crkbd/crkbd.h:21,
                 from ./keyboards/crkbd/keymaps/seajaysec_CRKBD_FORREAL/keymap.c:18,
                 from quantum/keymap_introspection.c:5:
drivers/oled/oled_driver.h:290:6: note: previous declaration of 'oled_task_user' was here
 bool oled_task_user(void);
      ^~~~~~~~~~~~~~
 [ERRORS]
 |
 |
 |
gmake[1]: *** [builddefs/common_rules.mk:359: .build/obj_crkbd_rev1_seajaysec_CRKBD_FORREAL/quantum/keymap_introspection.o] Error 1
gmake: *** [Makefile:414: crkbd:seajaysec_CRKBD_FORREAL] Error 1
Make finished with errors
